--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
-storage
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+.eggs/
+*.egg
+
+# Virtual Environments
+venv/
+env/
+.venv/
 .env
-src/__pycache__
-src/services/__pycache__
-src/db/__pycache__
+
+# Unit test / coverage reports
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Logs
+*.log
+logs/
+
+# IDEs / Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS specific
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Project specific
+storage/
